--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.htc</groupId>
-    <artifactId>springcloud-demo</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>hippo4j-test</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>htc-order-service</module>
+        <module>htc-nacos-prometheus</module>
     </modules>
 
     <parent>
@@ -102,4 +102,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
