--- a/htc-nacos-prometheus/src/main/resources/application.yml
+++ b/htc-nacos-prometheus/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   profiles:
     active: dev
   application:
-    name: order-service
+    name: prometheus-service
   dynamic:
     thread-pool:
       # 是否开启动态线程池
@@ -28,10 +28,10 @@ spring:
           token: xxx
       # nacos apollo、zookeeper 任选其一
       nacos:
-        data-id: order-service-dev
+        data-id: prometheus-service-dev
         group: order-service
-#      apollo:
-#        namespace: xxxx
+      #      apollo:
+      #        namespace: xxxx
       # 配置中心文件格式
       config-file-type: yml
       # tomcat、undertow、jetty 三种容器线程池，任选其一
